--- a/main.html
+++ b/main.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="container">
         <div class="player-names">
-            <input type="text" id="player1" placeholder="Enter Player 1 Name" />
-            <input type="text" id="player2" placeholder="Enter Player 2 Name" />
+            <input type="text" id="player1" placeholder="Player 1 Name (X)">
+            <input type="text" id="player2" placeholder="Player 2 Name (O)">
             <button id="submit">Start Game</button>
         </div>
-        <div class="game" style="display: none;">
-            <h1>Tic Tac Toe</h1>
-            <div class="message"></div>
+        <div class="game" style="display:none;">
             <div class="board">
                 <div class="cell" id="1"></div>
                 <div class="cell" id="2"></div>
@@ -29,9 +25,8 @@
                 <div class="cell" id="8"></div>
                 <div class="cell" id="9"></div>
             </div>
+            <div class="message"></div>
         </div>
     </div>
-    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
