--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="player-names">
-            <input type="text" id="player1" placeholder="Player 1 Name (X)">
-            <input type="text" id="player2" placeholder="Player 2 Name (O)">
+            <input type="text" id="player1" placeholder="enter name">
+            <input type="text" id="player2" placeholder="enter name">
             <button id="submit">Start Game</button>
         </div>
         <div class="game" style="display:none;">
