--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Tic Tac Toe</h1> <!-- Ensure this line is present -->
     <div class="container">
         <div class="player-names">
-            <input type="text" id="player1" placeholder="enter name">
-            <input type="text" id="player2" placeholder="enter name">
+            <input type="text" id="player1" placeholder="Player 1 Name (X)">
+            <input type="text" id="player2" placeholder="Player 2 Name (O)">
             <button id="submit">Start Game</button>
         </div>
         <div class="game" style="display:none;">
@@ -28,5 +29,6 @@
             <div class="message"></div>
         </div>
     </div>
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
