--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tic Tac Toe</h1> <!-- Ensure this line is present -->
+    <h1>Tic Tac Toe</h1> 
     <div class="container">
         <div class="player-names">
             <input type="text" id="player1" placeholder="Player 1 Name (X)">
@@ -29,6 +29,6 @@
             <div class="message"></div>
         </div>
     </div>
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <script src="script.js"></script> 
 </body>
 </html>
