--- a/main.html
+++ b/main.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Multiplayer Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tic Tac Toe</h1> 
+
     <div class="container">
-        <div class="player-names">
-            <input type="text" id="player1" placeholder="Player 1 Name (X)">
-            <input type="text" id="player2" placeholder="Player 2 Name (O)">
+        <h1>Multiplayer Tic Tac Toe</h1>
+
+        <!-- Input Section for Player Names -->
+        <div id="name-input-section">
+            <input type="text" id="player-1" placeholder="Enter Player 1 Name" />
+            <input type="text" id="player-2" placeholder="Enter Player 2 Name" />
             <button id="submit">Start Game</button>
         </div>
-        <div class="game" style="display:none;">
+
+        <!-- Tic Tac Toe Game Board -->
+        <div id="game-board" class="game-board" style="display: none;">
+            <h1>Tic Tac Toe</h1>
+            <div class="message">Player 1, you're up!</div>
+
             <div class="board">
                 <div class="cell" id="1"></div>
                 <div class="cell" id="2"></div>
@@ -26,9 +34,10 @@
                 <div class="cell" id="8"></div>
                 <div class="cell" id="9"></div>
             </div>
-            <div class="message"></div>
         </div>
     </div>
-    <script src="script.js"></script> 
+
+    <script src="scripts.js"></script>
+
 </body>
 </html>
