--- a/main.html
+++ b/main.html
@@ -13,8 +13,9 @@
 
         <!-- Input Section for Player Names -->
         <div id="name-input-section">
-            <input type="text" id="player-1" placeholder="Enter Player 1 Name" />
-            <input type="text" id="player-2" placeholder="Enter Player 2 Name" />
+            <!-- Change IDs to match those expected by the test -->
+            <input type="text" id="player1" placeholder="Enter Player 1 Name" />
+            <input type="text" id="player2" placeholder="Enter Player 2 Name" />
             <button id="submit">Start Game</button>
         </div>
 
