--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
         <!-- Input Section for Player Names -->
         <div id="name-input-section">
-            <!-- Change IDs to match those expected by the test -->
+            <!-- Changed IDs to match the test expectations -->
             <input type="text" id="player1" placeholder="Enter Player 1 Name" />
             <input type="text" id="player2" placeholder="Enter Player 2 Name" />
             <button id="submit">Start Game</button>
@@ -22,6 +22,7 @@
         <!-- Tic Tac Toe Game Board -->
         <div id="game-board" class="game-board" style="display: none;">
             <h1>Tic Tac Toe</h1>
+            <!-- Message to show whose turn it is -->
             <div class="message">Player 1, you're up!</div>
 
             <div class="board">
